deployment/file-http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: file-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: file-store
spec:
  hosts:
  - "*"
  gateways:
  - file-gateway
  http:
  - match:
    - uri:
        prefix: /file
    route:
    - destination:
        port:
          number: 8082
        host: file-store
